# rusty-ear

./: .gitignore  Cargo.toml
src/: camera.rs  main.rs
