[package]
name = "webrtc-rpi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
webrtc = "0.8.0"
opencv = "0.93"
rust_socketio = { version = "0.6.0", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
futures-util = "0.3"
gstreamer = "0.23.2"
gstreamer-app = "0.23.2"