[package]
name = "webrtc-rpi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24.0"
webrtc = "0.11.0"
rust_socketio = { version = "0.6.0", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.5"
futures-util = "0.3"
gstreamer = "0.23.2"
gstreamer-app = "0.23.2"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }
jsonwebtoken = "9.3.0"
dotenv = "0.15"
once_cell = "1.20.2"
